tests/bad/too_many_params.mil
function a(val x) {
	print(x);
}

function main() {
	a(3, 5);
}